--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost/dedusers
+spring.datasource.url=jdbc:mysql://localhost/dedweb
 spring.datasource.username=root
 spring.datasource.password=1Dothisf
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.mvc.hiddenmethod.filter.enabled=true
